내정보 완료

--- a/src/status.html
+++ b/src/status.html
@@ -1451,7 +1451,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0801_M01.html">SCR_GA_CI_0801_M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1465,7 +1465,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0801_P01#full">SCR_GA_CI_0801_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220831
 							</td>
@@ -1481,7 +1481,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901 _M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1495,7 +1495,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01.html">SCR_GA_CI_0903_M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1509,7 +1509,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_01.html">SCR_GA_CI_0903_M01_01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1523,7 +1523,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_02.html">SCR_GA_CI_0903_M01_02.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1567,7 +1567,7 @@
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_M01_P01#bottom">SCR_GA_CI_1201_M01_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1581,7 +1581,7 @@
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_P01">SCR_GA_CI_1201_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl"></td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220831
 							</td>
@@ -1596,8 +1596,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1202_M01.html">SCR_GA_CI_1202_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220831
 							</td>
@@ -1612,8 +1612,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1301_T01.html">SCR_GA_CI_1301_T01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220831
 							</td>
@@ -1628,8 +1628,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1301_P01#full">SCR_GA_CI_1301_P01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1642,8 +1642,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1302_T02.html">SCR_GA_CI_1302_T02.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date">
 								20220831
 							</td>
@@ -1658,8 +1658,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1302_P01#full">SCR_GA_CI_1302_P01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1672,8 +1672,8 @@
                             <td>이민우 </td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1401_M01.html">SCR_GA_CI_1401_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1686,8 +1686,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1402_M01.html">SCR_GA_CI_1402_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1700,8 +1700,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1714,8 +1714,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CS_0101_M01_P01#full">SCR_GA_CS_0101_M01_P01.html</a></td>
-                            <td class="stat">⚪</td>
-                            <td class="compl"></td>
+                            <td class="stat">⚫</td>
+                            <td class="compl">20220906</td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
