사고접수현황 수정

--- a/src/html/fo/SCR_GA_FO_0301_M01.html
+++ b/src/html/fo/SCR_GA_FO_0301_M01.html
@@ -33,7 +33,9 @@
 									</div>
 								</a>
 								<div class="title-area">
-									<h3 class="title-xs flex">대여기간</h3>
+									<!-- 20220906 -->
+									<h3 class="title-xxs flex">대여기간</h3>
+									<!-- //20220906 -->
 								</div>
 								<div class="grid-flex">
 									<div class="flex">오늘 10:10 ~ 12:10</div>
@@ -46,7 +48,9 @@
 	
 						<section class="section">
 							<div class="title-area ">
-								<h3 class="title-xs flex">대여유형 <span class="tag">편도</span></h3>
+								<!-- 20220906 -->
+								<h3 class="title-xxs flex">대여유형 <span class="tag">편도</span></h3>
+								<!-- //20220906 -->
 							</div>
 							<div class="grid-flex">
 								<div class="flex col-3">대여/반납 위치</div>
@@ -73,7 +77,9 @@
 						<section class="section">
 							<div class="title-area">
 								<div class="flex">
-									<h3 class="title-xs">결제정보</h3>
+									<!-- 20220906 -->
+									<h3 class="title-xxs">결제정보</h3>
+									<!-- //20220906 -->
 								</div>
 							</div>
 							<div class="grid-flex">
@@ -112,7 +118,9 @@
 	
 						<section class="section corporation">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">결제수단</h3>
+								<!-- 20220906 -->
+								<h3 class="title-xxs flex">결제수단</h3>
+								<!-- //20220906 -->
 								<div class="flex">
 									<button class="btn-link" type="button">국민카드 6306<i class="ico arrow-right-nav060 lg"></i></button>
 									<span class="txt">법인[전용]</span>
@@ -192,7 +200,9 @@
 
 						<section class="section">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">예약 전 주의사항</h3>
+								<!-- 20220906 -->
+								<h3 class="title-xxs flex">예약 전 주의사항</h3>
+								<!-- //20220906 -->
 							</div>
 							<div class="info-module">
 								<p class="desc-xs">
