--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -49,7 +49,7 @@
 								</div>
 								
 								<div class="title-area grid-flex">
-									<h3 class="title-xs flex col-3">주행요금</h3>
+									<h3 class="title-xxs flex col-3">주행요금</h3>
 									<div class="flex col-7">170원 / km</div>
 								</div>
 								<p class="desc-sm">* 주행요금은 반납 후 실주행거리에 따라 별도로 청구됩니다.</p>
@@ -60,7 +60,7 @@
 	
 						<section class="section">
 							<div class="title-area">
-								<h3 class="title-xs">대여기간</h3>
+								<h3 class="title-xxs">대여기간</h3>
 							</div>
 							<div class="grid-flex">
 								<div class="flex"><a href="#">오늘 10:10 ~ 12:10</a></div>
@@ -75,7 +75,7 @@
 	
 						<section class="section">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">대여유형 <span class="tag">편도</span><span class="tag green">왕복</span></h3>
+								<h3 class="title-xxs flex">대여유형 <span class="tag">편도</span><span class="tag green">왕복</span></h3>
 								<div class="flex">
 									<button class="btn-link" type="button">
 										<span class="under">편도로 변경</span><i class="ico arrow-right-nav060 lg"></i>
@@ -107,7 +107,9 @@
 						<section class="section">
 							<div class="title-area grid-flex">
 								<div class="flex">
-									<h3 class="title-xs">결제정보 <span class="tag sale">45% 할인</span></h3>
+									<!-- 20220906 -->
+									<h3 class="title-xxs">결제정보 <span class="tag sale">45% 할인</span></h3>
+									<!-- //20220906 -->
 								</div>
 								<div class="flex">
 									<span class="price deco-througt">1,730,000</span>원
@@ -132,7 +134,9 @@
 	
 							<div class="point-module">
 								<div class="title-area">
-									<h3 class="title-xs">포인트</h3>
+									<!-- 20220906 -->
+									<h3 class="title-xxs">포인트</h3>
+									<!-- //20220906 -->
 								</div>
 								<!-- 20220831 -->
 								<div class="ip-group">
@@ -170,7 +174,9 @@
 	
 						<section class="section">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">보험료</h3>
+								<!-- 20220906 -->
+								<h3 class="title-xxs flex">보험료</h3>
+								<!-- //20220906 -->
 								<div class="flex">
 									<button class="btn-link" type="button">
 										<span class="under">자세히</span>
@@ -205,7 +211,9 @@
 	
 						<section class="section corporation">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">결제수단</h3>
+								<!-- 20220906 -->
+								<h3 class="title-xxs flex">결제수단</h3>
+								<!-- //20220906 -->
 								<div class="flex">
 									<button class="btn-link" type="button">국민카드 6306<i class="ico arrow-right-nav060 lg"></i></button>
 									<span class="txt">법인[전용]</span>
@@ -276,7 +284,9 @@
 
 						<section class="section">
 							<div class="title-area grid-flex">
-								<h3 class="title-xs flex">예약 전 주의사항</h3>
+								<!-- 20220906 -->
+								<h3 class="title-xxs flex">예약 전 주의사항</h3>
+								<!-- //20220906 -->
 							</div>
 							<div class="info-module">
 								<p class="desc-xs">
