--- a/src/html/status/SCR_GA_AR_0201_M01.html
+++ b/src/html/status/SCR_GA_AR_0201_M01.html
@@ -29,7 +29,7 @@
 										<div class="info">
 											<p class="car">셀토스 1.6 (디젤)</p>
 											<p class="number">145허4454</p>
-											<div class="subway"><i class="ico badge-g"></i>한남역 1번 출구</div>
+											<div class="subway">한남역 1번 출구</div>
 											<p class="date">2022.04.23 10:00 ~ 2022.04.23 12:00</p>
 											<p class="receipt">접수일시: 2022.04.23 11:30</p>
 											<i class="ico arrow-right-nav060 lg"></i>
@@ -61,7 +61,7 @@
 										<div class="info">
 											<p class="car">셀토스 1.6 (디젤)</p>
 											<p class="number">145허4454</p>
-											<div class="subway"><i class="ico badge-g"></i>한남역 1번 출구</div>
+											<div class="subway">한남역 1번 출구</div>
 											<p class="date">2022.04.23 10:00 ~ 2022.04.23 12:00</p>
 											<p class="receipt">접수일시: 2022.04.23 11:30</p>
 											<i class="ico arrow-right-nav060 lg"></i>
