--- a/src/status.html
+++ b/src/status.html
@@ -392,6 +392,7 @@
 								20220818<br>
 								20220823<br>
 								20220831
+								20220906
 							</td>
                             <td></td>
                         </tr>
@@ -1451,7 +1452,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0801_M01.html">SCR_GA_CI_0801_M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1465,7 +1466,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0801_P01#full">SCR_GA_CI_0801_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date">
 								20220831
 							</td>
@@ -1481,8 +1482,10 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0901_M01.html">SCR_GA_CI_0901 _M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
-                            <td class="date"></td>
+                            <td class="compl"></td>
+                            <td class="date">
+								20220906
+							</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -1495,7 +1498,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01.html">SCR_GA_CI_0903_M01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1509,7 +1512,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_01.html">SCR_GA_CI_0903_M01_01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1523,7 +1526,7 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_0903_M01_02.html">SCR_GA_CI_0903_M01_02.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1567,7 +1570,7 @@
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_M01_P01#bottom">SCR_GA_CI_1201_M01_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1581,7 +1584,7 @@
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_P01">SCR_GA_CI_1201_P01.html</a></td>
                             <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="compl"></td>
                             <td class="date">
 								20220831
 							</td>
@@ -1596,8 +1599,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1202_M01.html">SCR_GA_CI_1202_M01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date">
 								20220831
 							</td>
@@ -1612,8 +1615,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1301_T01.html">SCR_GA_CI_1301_T01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date">
 								20220831
 							</td>
@@ -1628,8 +1631,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1301_P01#full">SCR_GA_CI_1301_P01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1642,8 +1645,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1302_T02.html">SCR_GA_CI_1302_T02.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date">
 								20220831
 							</td>
@@ -1658,8 +1661,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1302_P01#full">SCR_GA_CI_1302_P01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1672,8 +1675,8 @@
                             <td>이민우 </td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1401_M01.html">SCR_GA_CI_1401_M01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1686,8 +1689,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CI_1402_M01.html">SCR_GA_CI_1402_M01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1700,8 +1703,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
                             <td><a target="_blank" href="html/mypage/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -1714,8 +1717,8 @@
                             <td>이민우</td>
                             <td>/mypage</td>
 							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CS_0101_M01_P01#full">SCR_GA_CS_0101_M01_P01.html</a></td>
-                            <td class="stat">⚫</td>
-                            <td class="compl">20220906</td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
                         </tr>
@@ -2326,7 +2329,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="html/status/SCR_GA_AR_0101_M01.html">SCR_GA_AR_0101_M01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl">
 								20220905
@@ -2342,7 +2345,7 @@
 							<td>이민우</td>
 							<td>/status</td>
 							<td><a target="_blank" href="components/popup_module.html#status#SCR_GA_AR_0101_P01#full">SCR_GA_AR_0101_P01.html</a></td>
-							<td class="stat">⚪</td>
+							<td class="stat">⚫</td>
 							<td class="date"></td>
                             <td class="compl"></td>
 							<td></td>
@@ -2537,7 +2540,9 @@
 							<td>/fo</td>
 							<td><a target="_blank" href="html/fo/SCR_GA_FO_0301_M01.html">SCR_GA_FO_0301_M01.html</a></td>
 							<td class="stat">⚪</td>
-							<td class="date"></td>
+							<td class="date">
+								20220906
+							</td>
                             <td class="compl"></td>
 							<td></td>
 						</tr>
@@ -2760,6 +2765,7 @@
 							<td class="date"></td>
                             <td class="compl">
 								20220831
+								20220906
 							</td>
 							<td></td>
 						</tr>
