--- a/src/html/etc/SCR_GA_ER_0202_M01.html
+++ b/src/html/etc/SCR_GA_ER_0202_M01.html
@@ -107,28 +107,30 @@
 							</div>
 							<div class="layer">
 								<div class="layer-cont">
+									<!-- 20220906 -->
 									<div class="agree-cont">
-										<p class="title-xs">
+										<p class="title-xxs">
 											이용목적
 										</p>
 										<p class="desc-sm">
 											장애 신고 접수 및 조치를 위한 개인정보 수집
 										</p>
 
-										<p class="title-xs">
+										<p class="title-xxs">
 											수집항목
 										</p>
 										<p class="desc-sm">
 											이름, 휴대폰번호 , 신고 사유
 										</p>
 
-										<p class="title-xs">
+										<p class="title-xxs">
 											보유기간
 										</p>
 										<p class="desc-sm">
 											접수 처리 후 3 개월간 별도 보관 후 파기
 										</p>
 									</div>
+									<!-- //20220906 -->
 								</div>
 							</div>
 						</li>
