--- a/src/html/mypage/SCR_GA_CI_0901_M01.html
+++ b/src/html/mypage/SCR_GA_CI_0901_M01.html
@@ -15,7 +15,9 @@
                     <div class="invite-friend">
                         <section class="section">
                             <div class="invitee">
-                                <h3 class="title-xs">추천인 초대</h3>
+								<!-- 20220906 -->
+                                <h3 class="title-xxs">추천인 초대</h3>
+								<!-- //20220906 -->
                                 <div class="count">
                                     <span class="value">3</span>
                                     <span class="unit">명</span>
@@ -26,10 +28,12 @@
                             </div>
                             <div class="row">
                                 <div class="left">
-                                    <h3 class="title-xs">
-                                        누적 리워드
+									<!-- 20220906 -->
+                                    <h3 class="title-xxs">
+										누적 리워드
                                         <span>나/친구 각 1만원 쿠폰</span>
                                     </h3>
+									<!-- //20220906 -->
                                 </div>
                                 <div class="right">
                                     <span class="reward">
