--- a/src/html/status/SCR_GA_AR_0101_M01.html
+++ b/src/html/status/SCR_GA_AR_0101_M01.html
@@ -51,7 +51,11 @@
 							</div>
 						</div>
 
+						<hr class="divider">
 						<div class="status-guide">
+							<h3 class="title-sm">
+								사고촬영 가이드
+							</h3>
 							<div class="block">
 								<img src="/images/contents/img_status_guide01.png" alt="사고상황 예시(차대차 기준)">
 							</div>
@@ -67,6 +71,29 @@
 							<div class="block">
 								<img src="/images/contents/img_status_guide06.png" alt="사고부위 근접 촬영 B (위와 반대 방향)">
 							</div>
+						</div>
+
+						<div class="notice-txt">
+							<h4 class="title-xs">
+								유의사항
+							</h4>
+							<ul class="list">
+								<li>
+									사고접수는 고객센터 상담원을 통해 유선으로만 가능합니다.
+								</li>
+								<li>
+									상담원과의 사고접수 완료 시 안내메시지가 발송되며, 이후 사고처리현황에서 사고사진을 등록하실 수 있습니다.
+								</li>
+								<li>
+									사고수리에 대한 면책금 안내 및 청구서 발송은 4주 이내 처리됩니다.
+								</li>
+								<li>
+									사고 미신고 시, 차량 손해 면책 보험을 적용 받으실 수  없으며 실 수리비 전액 배상과 휴차료 지불, 법적 조치 및 서비스 이용정지 조치가 이루어집니다.
+								</li>
+								<li>
+									사고 미신고 시, 차량 손해 면책 보험을 적용 받으실 수  없으며 실 수리비 전액 배상과 휴차료 지불, 법적 조치 및 서비스 이용정지 조치가 이루어집니다.
+								</li>
+							</ul>
 						</div>
 					</div>
 
